# xplique

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TUTORIALS.md  mkdocs.yml  package_python.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy-docs.yml  python-lints.yml  python-publish.yml  python-tests.yml  python-torch.yml
docs/: contributing.md  index.md  tutorials.md
docs/api/attributions/: api_attributions.md  callable.md  classification.md  object_detection.md  pytorch.md  regression.md  semantic_segmentation.md
docs/api/attributions/methods/: fem.md
docs/api/attributions/metrics/: api_metrics.md
docs/api/example_based/: api_example_based.md
docs/api/example_based/counterfactuals/: label_aware_counter_factuals.md  naive_counter_factuals.md
docs/api/example_based/prototypes/: api_prototypes.md  proto_dash.md  proto_greedy.md
docs/api/example_based/similar_examples/: cole.md  similar_examples.md
tests/: utils.py
tests/attributions/: test_common.py  test_fem.py  test_grad_cam.py  test_hsic.py  test_online_statistics.py  test_sobol.py  test_tabular_data.py
tests/commons/: test_object_detection_operator.py  test_operators_operations.py  test_segmentation_operator.py
tests/concepts/: test_craft_tf.py  test_craft_torch.py
tests/example_based/: test_cole.py  test_datasets_harmonization.py  test_kleor.py  test_projections.py  test_tf_dataset_operation.py
tests/metrics/: test_common.py  test_complexity.py  test_fidelity.py  test_mege.py  test_randomization.py  test_stability.py
tests/utils_functions/: test_segmentation.py
tests/wrappers/: test_pytorch_wrapper.py
xplique/: __init__.py
xplique/attributions/: __init__.py  fem.py  grad_cam.py  object_detector.py
xplique/attributions/global_sensitivity_analysis/: __init__.py  sobol_estimators.py
xplique/attributions/gradient_statistics/: __init__.py
xplique/commons/: __init__.py  operators_operations.py
xplique/concepts/: __init__.py  tcav.py
xplique/example_based/: __init__.py  similar_examples.py
xplique/example_based/projections/: __init__.py  attributions.py  commons.py  hadamard.py  latent_space.py
xplique/example_based/search_methods/: __init__.py  knn.py  proto_greedy_search.py
xplique/features_visualizations/: __init__.py  maco.py  optim.py
xplique/metrics/: __init__.py  base.py  complexity.py  fidelity.py  randomization.py
xplique/plots/: __init__.py
xplique/types/: __init__.py  custom_type.py
xplique/wrappers/: pytorch.py
